--- a/300x250/_/components/sass/_adstyles.scss
+++ b/300x250/_/components/sass/_adstyles.scss
@@ -79,6 +79,22 @@
             top:123px;
             left:320px;
         }
+        #bradT5{
+              background-image: url(../img/t5.png);
+            width:123px;
+            height:30px;
+            position: absolute;
+            top:20px;
+            left:134px;
+        }
+        #bradT6{
+              background-image: url(../img/t6.png);
+            width:144px;
+            height:30px;
+            position: absolute;
+            top:270px;
+            left:134px;
+        }
         
         #bradFooter{
             background:#fff;
