--- a/300x250/css/styles.css
+++ b/300x250/css/styles.css
@@ -104,6 +104,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     position: absolute;
     top: 123px;
     left: 320px; }
+  #bradContainer #bradContent #bradT5 {
+    background-image: url(../img/t5.png);
+    width: 123px;
+    height: 30px;
+    position: absolute;
+    top: 20px;
+    left: 134px; }
+  #bradContainer #bradContent #bradT6 {
+    background-image: url(../img/t6.png);
+    width: 144px;
+    height: 30px;
+    position: absolute;
+    top: 270px;
+    left: 134px; }
   #bradContainer #bradContent #bradFooter {
     background: #fff;
     width: 300px;
