--- a/300x250/_/components/sass/_adstyles.scss
+++ b/300x250/_/components/sass/_adstyles.scss
@@ -53,7 +53,7 @@
             height:111px;
             position: absolute;
             left:57px;
-            top:46px;
+            top:-30px;
         }
         #bradT2{
               background-image: url(../img/t2.png);
@@ -94,6 +94,31 @@
             position: absolute;
             top:270px;
             left:132px;
+        }
+        #bradT7{
+              background-image: url(../img/t7.png);
+            width:78px;
+            height:26px;
+            position: absolute;
+            top:62px;
+            left:-100px;
+        }
+        #bradT8{
+              background-image: url(../img/t8.png);
+            width:256px;
+            height:23px;
+            position: absolute;
+            top:96px;
+            left:-100px;
+        }
+        
+        #bradKidney{
+              background-image: url(../img/kidney_no_glow.png);
+            width:182px;
+            height:130px;
+            position: absolute;
+            top:56px;
+            left:81px;
         }
         
         #bradFooter{
