--- a/300x250/css/styles.css
+++ b/300x250/css/styles.css
@@ -82,7 +82,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     height: 111px;
     position: absolute;
     left: 57px;
-    top: 46px; }
+    top: -30px; }
   #bradContainer #bradContent #bradT2 {
     background-image: url(../img/t2.png);
     width: 157px;
@@ -118,6 +118,27 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     position: absolute;
     top: 270px;
     left: 132px; }
+  #bradContainer #bradContent #bradT7 {
+    background-image: url(../img/t7.png);
+    width: 78px;
+    height: 26px;
+    position: absolute;
+    top: 62px;
+    left: -100px; }
+  #bradContainer #bradContent #bradT8 {
+    background-image: url(../img/t8.png);
+    width: 256px;
+    height: 23px;
+    position: absolute;
+    top: 96px;
+    left: -100px; }
+  #bradContainer #bradContent #bradKidney {
+    background-image: url(../img/kidney_no_glow.png);
+    width: 182px;
+    height: 130px;
+    position: absolute;
+    top: 56px;
+    left: 81px; }
   #bradContainer #bradContent #bradFooter {
     background: #fff;
     width: 300px;
