--- a/300x250/_/components/sass/_adstyles.scss
+++ b/300x250/_/components/sass/_adstyles.scss
@@ -112,13 +112,48 @@
             left:-100px;
         }
         
+        #bradT9{
+              background-image: url(../img/t9.png);
+            width:180px;
+            height:14px;
+            position: absolute;
+            top:12px;
+            left:12px;
+        }
+        #bradT10{
+              background-image: url(../img/t10.png);
+            width:195px;
+            height:51px;
+            position: absolute;
+            top:32px;
+            left:12px;
+        }
+        
         #bradKidney{
               background-image: url(../img/kidney_no_glow.png);
             width:182px;
             height:130px;
             position: absolute;
-            top:56px;
-            left:81px;
+            top:63px;
+            left:83px;
+        }
+        
+        #bradKidneyFlare{
+              background-image: url(../img/glow.png);
+            width:300px;
+            height:250px;
+            position: absolute;
+            top:-3px;
+            left:0px;
+        }
+        
+        #bradFlare{
+              background-image: url(../img/flare.png);
+            width:143px;
+            height:98px;
+            position: absolute;
+            top:0px;
+            left:180px;
         }
         
         #bradFooter{
@@ -134,6 +169,26 @@
                 left:205px;
                 width:80px;
                 height:21px;
+            }
+            #bradFooterCTA{
+                background:#fa7700;
+                position:absolute;
+                top:9px;
+                left:12px;
+                width:138px;
+                height:30px;
+                /*set clip property so that from() tween knows what the ending values should be */
+                clip:rect(0px, 138px, 30px, 0px);
+
+                
+                #bradFooterCTAT{
+                    background-image: url(../img/ctaTxt.png);
+                    position: absolute;
+                    top: 11px;
+                    left:8px;
+                    width: 122px;
+                    height: 10px;
+                }
             }
         }
     }
