--- a/300x250/css/styles.css
+++ b/300x250/css/styles.css
@@ -132,13 +132,41 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     position: absolute;
     top: 96px;
     left: -100px; }
+  #bradContainer #bradContent #bradT9 {
+    background-image: url(../img/t9.png);
+    width: 180px;
+    height: 14px;
+    position: absolute;
+    top: 12px;
+    left: 12px; }
+  #bradContainer #bradContent #bradT10 {
+    background-image: url(../img/t10.png);
+    width: 195px;
+    height: 51px;
+    position: absolute;
+    top: 32px;
+    left: 12px; }
   #bradContainer #bradContent #bradKidney {
     background-image: url(../img/kidney_no_glow.png);
     width: 182px;
     height: 130px;
     position: absolute;
-    top: 56px;
-    left: 81px; }
+    top: 63px;
+    left: 83px; }
+  #bradContainer #bradContent #bradKidneyFlare {
+    background-image: url(../img/glow.png);
+    width: 300px;
+    height: 250px;
+    position: absolute;
+    top: -3px;
+    left: 0px; }
+  #bradContainer #bradContent #bradFlare {
+    background-image: url(../img/flare.png);
+    width: 143px;
+    height: 98px;
+    position: absolute;
+    top: 0px;
+    left: 180px; }
   #bradContainer #bradContent #bradFooter {
     background: #fff;
     width: 300px;
@@ -152,6 +180,22 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
       left: 205px;
       width: 80px;
       height: 21px; }
+    #bradContainer #bradContent #bradFooter #bradFooterCTA {
+      background: #fa7700;
+      position: absolute;
+      top: 9px;
+      left: 12px;
+      width: 138px;
+      height: 30px;
+      /*set clip property so that from() tween knows what the ending values should be */
+      clip: rect(0px, 138px, 30px, 0px); }
+      #bradContainer #bradContent #bradFooter #bradFooterCTA #bradFooterCTAT {
+        background-image: url(../img/ctaTxt.png);
+        position: absolute;
+        top: 11px;
+        left: 8px;
+        width: 122px;
+        height: 10px; }
 
 /**
 --------------------------UI---------------------------
