--- a/300x250/css/styles.css
+++ b/300x250/css/styles.css
@@ -81,8 +81,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     width: 183px;
     height: 111px;
     position: absolute;
-    left: 57px;
-    top: -30px; }
+    left: 57px; }
   #bradContainer #bradContent #bradT2 {
     background-image: url(../img/t2.png);
     width: 157px;
@@ -123,14 +122,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     width: 78px;
     height: 26px;
     position: absolute;
-    top: 62px;
+    top: 74px;
     left: -100px; }
   #bradContainer #bradContent #bradT8 {
     background-image: url(../img/t8.png);
     width: 256px;
     height: 23px;
     position: absolute;
-    top: 96px;
+    top: 110px;
     left: -100px; }
   #bradContainer #bradContent #bradT9 {
     background-image: url(../img/t9.png);
