--- a/160x600/_/components/sass/_adstyles.scss
+++ b/160x600/_/components/sass/_adstyles.scss
@@ -1,13 +1,188 @@
-#adContainer
+#bradContainer
 {
     font-family: sans-serif;
     font-size:20px;
     color:#ffffff;
-    background-color: #666666;
-    width:300px;
-    height:250px;
+    width:160px;
+    height:600px;
+    border: 1px solid #666;
     border: 1px solid #666;
     position:relative;
     overflow:hidden;
     text-decoration: none;
+    background:#33a749;
+   -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; // IE8
+
+          /* This works in IE 8 & 9 too */
+          /* ... but also 5, 6, 7 */
+         filter: alpha(opacity=0); // IE 5-7
+
+          /* Modern Browsers */
+          opacity: 0;
+    
+    #bradContent
+    {
+        .bradSwoosh{
+            background-image: url(../img/swoosh.svg);
+            width: 690px;
+            height: 550px;
+            position: absolute;
+        }
+        
+        #bradSvg1Container{
+        }
+        #bradSvg2Container{
+            //top: -200px;
+        }
+        #bradLogoContainer{
+            background:#fff;
+            position:absolute;
+            left:0;
+            top:525px;
+            width:160px;
+            height:75px;
+            #bradLogo{
+                background-image: url(../img/logo.png);
+                width:82px;
+                height:22px;
+                position:absolute;
+                left:39px;
+                top:28px;
+            }
+        }
+        #bradT1{
+            position:absolute;
+            left:14px;
+            top:197px;
+            width:136px;
+            height: 118px;
+            background-image: url(../img/t1.png);
+        }
+        #bradT2{
+            position:absolute;
+            left:27px;
+            top:212px;
+            width: 105px;
+            height: 46px;
+            background-image: url(../img/t2.png);
+        }
+        #bradT3{
+            position:absolute;
+            left:14px;
+            top:316px;
+            width: 50px;
+            height: 26px;
+            background-image: url(../img/t3.png);
+        }
+        #bradT4{
+            position:absolute;
+            left:14px;
+            top:345px;
+            width: 133px;
+            height: 26px;
+            background-image: url(../img/t4.png);
+        }
+        #bradT5{
+            position:absolute;
+            left:19px;
+            top:191px;
+            width: 101px;
+            height: 24px;
+            background-image: url(../img/t5.png);
+        }
+        #bradT6{
+            position:absolute;
+            left:19px;
+            top:221px;
+            width: 117px;
+            height: 24px;
+            background-image: url(../img/t6.png);
+        }
+        #bradT7{
+            position:absolute;
+            left:14px;
+            top:149px;
+            width:129px;
+            height: 114px;
+            background-image: url(../img/t7.png);
+        }
+        #bradT8{
+            position:absolute;
+            left:14px;
+            top:114px;
+            width: 105px;
+            height: 29px;
+            background-image: url(../img/t8.png);
+        }
+        #bradT9{
+            position:absolute;
+            left:14px;
+            top:149px;
+            width: 130px;
+            height: 38px;
+            background-image: url(../img/t9.png);
+        }
+        #bradFlare{
+            position:absolute;
+            width:143px;
+            height:98px;
+            top:0px;
+            left:67px;
+            background-image: url(../img/flare.png);
+        }
+        #bradKidney{
+            position:absolute;
+            width:182px;
+            height:130px;
+            top:288px;
+            left:0px;
+            background-image: url(../img/kidney_no_glow.png);
+        }
+        #bradKidneyFlare{
+            position:absolute;
+            width:151px;
+            height:86px;
+            top:288px;
+            left:5px;
+            background-image: url(../img/glow.png);
+        }
+        #bradCtaContainer{
+            background:#fa7700;
+                position:absolute;
+                top:482px;
+                left:8px;
+                width:142px;
+                height:24px;
+                /*set clip property so that from() tween knows what the ending values should be */
+                //clip:rect(0px, 142px, 24px, 0px);
+            
+            #bradCta{
+                position: absolute;
+                width:132px;
+                height:12px;
+                left:6px;
+                top:7px;
+                background-image: url(../img/ctatxt.png);
+            }
+        }
+    }
+}
+/**
+--------------------------UI---------------------------
+**/
+button {
+    padding: 10px;
+    margin-top: 10px;
+}
+
+button:nth-child(1){
+  margin-left:10px;
+}
+
+#slider{
+  width: 160px;
+  height:10px;
+    margin-top:10px;
+  background: rgba(80,80,80,0.3);
+  border:1px solid rgba(102,102,102,0.5);
 }
