--- a/728x90/_/components/sass/_adstyles.scss
+++ b/728x90/_/components/sass/_adstyles.scss
@@ -52,7 +52,7 @@
         #bradT1{
             position:absolute;
             left:19px;
-            top:33px;
+            top:35px;
             width:424px;
             height: 28px;
             background-image: url(../img/t1.png);
@@ -68,7 +68,7 @@
         #bradT3{
             position:absolute;
             left:19px;
-            top:44px;
+            top:47px;
             width: 67px;
             height: 35px;
             background-image: url(../img/t3.png);
@@ -76,7 +76,7 @@
         #bradT4{
             position:absolute;
             left:96px;
-            top:44px;
+            top:47px;
             width: 183px;
             height: 35px;
             background-image: url(../img/t4.png);
@@ -84,7 +84,7 @@
         #bradT5{
             position:absolute;
             left:372px;
-            top:18px;
+            top:14px;
             width: 123px;
             height: 30px;
             background-image: url(../img/t5.png);
@@ -92,7 +92,7 @@
         #bradT6{
             position:absolute;
             left:372px;
-            top:53px;
+            top:49px;
             width: 144px;
             height: 30px;
             background-image: url(../img/t6.png);
@@ -126,7 +126,7 @@
             width:143px;
             height:98px;
             top:0px;
-            left:270px;
+            left:265px;
             background-image: url(../img/flare.png);
         }
         #bradKidney{
@@ -134,15 +134,15 @@
             width:182px;
             height:130px;
             top:-35px;
-            left:324px;
+            left:332px;
             background-image: url(../img/kidney_no_glow.png);
         }
         #bradKidneyFlare{
             position:absolute;
             width:151px;
             height:86px;
-            top:-9px;
-            left:348px;
+            top:-8px;
+            left:357px;
             background-image: url(../img/glow.png);
         }
         #bradCtaContainer{
@@ -153,7 +153,7 @@
                 width:182px;
                 height:24px;
                 /*set clip property so that from() tween knows what the ending values should be */
-                //clip:rect(0px, 182px, 24px, 0px);
+                clip:rect(0px, 182px, 24px, 0px);
             
             #bradCta{
                 position: absolute;
