--- a/728x90/css/styles.css
+++ b/728x90/css/styles.css
@@ -84,7 +84,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   #bradContainer #bradContent #bradT1 {
     position: absolute;
     left: 19px;
-    top: 33px;
+    top: 35px;
     width: 424px;
     height: 28px;
     background-image: url(../img/t1.png); }
@@ -98,28 +98,28 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   #bradContainer #bradContent #bradT3 {
     position: absolute;
     left: 19px;
-    top: 44px;
+    top: 47px;
     width: 67px;
     height: 35px;
     background-image: url(../img/t3.png); }
   #bradContainer #bradContent #bradT4 {
     position: absolute;
     left: 96px;
-    top: 44px;
+    top: 47px;
     width: 183px;
     height: 35px;
     background-image: url(../img/t4.png); }
   #bradContainer #bradContent #bradT5 {
     position: absolute;
     left: 372px;
-    top: 18px;
+    top: 14px;
     width: 123px;
     height: 30px;
     background-image: url(../img/t5.png); }
   #bradContainer #bradContent #bradT6 {
     position: absolute;
     left: 372px;
-    top: 53px;
+    top: 49px;
     width: 144px;
     height: 30px;
     background-image: url(../img/t6.png); }
@@ -149,21 +149,21 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     width: 143px;
     height: 98px;
     top: 0px;
-    left: 270px;
+    left: 265px;
     background-image: url(../img/flare.png); }
   #bradContainer #bradContent #bradKidney {
     position: absolute;
     width: 182px;
     height: 130px;
     top: -35px;
-    left: 324px;
+    left: 332px;
     background-image: url(../img/kidney_no_glow.png); }
   #bradContainer #bradContent #bradKidneyFlare {
     position: absolute;
     width: 151px;
     height: 86px;
-    top: -9px;
-    left: 348px;
+    top: -8px;
+    left: 357px;
     background-image: url(../img/glow.png); }
   #bradContainer #bradContent #bradCtaContainer {
     background: #fa7700;
@@ -172,7 +172,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     left: 19px;
     width: 182px;
     height: 24px;
-    /*set clip property so that from() tween knows what the ending values should be */ }
+    /*set clip property so that from() tween knows what the ending values should be */
+    clip: rect(0px, 182px, 24px, 0px); }
     #bradContainer #bradContent #bradCtaContainer #bradCta {
       position: absolute;
       width: 171px;
