--- a/160x600/css/styles.css
+++ b/160x600/css/styles.css
@@ -134,14 +134,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   #bradContainer #bradContent #bradT8 {
     position: absolute;
     left: 14px;
-    top: 114px;
+    top: 115px;
     width: 105px;
     height: 29px;
     background-image: url(../img/t8.png); }
   #bradContainer #bradContent #bradT9 {
     position: absolute;
     left: 14px;
-    top: 149px;
+    top: 148px;
     width: 130px;
     height: 38px;
     background-image: url(../img/t9.png); }
@@ -154,16 +154,16 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     background-image: url(../img/flare.png); }
   #bradContainer #bradContent #bradKidney {
     position: absolute;
-    width: 182px;
-    height: 130px;
+    width: 221px;
+    height: 145px;
     top: 288px;
-    left: 0px;
-    background-image: url(../img/kidney_no_glow.png); }
+    left: -45px;
+    background-image: url(../img/kidney.png); }
   #bradContainer #bradContent #bradKidneyFlare {
     position: absolute;
     width: 151px;
     height: 86px;
-    top: 288px;
+    top: 284px;
     left: 5px;
     background-image: url(../img/glow.png); }
   #bradContainer #bradContent #bradCtaContainer {
@@ -173,7 +173,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     left: 8px;
     width: 142px;
     height: 24px;
-    /*set clip property so that from() tween knows what the ending values should be */ }
+    /*set clip property so that from() tween knows what the ending values should be */
+    clip: rect(0px, 142px, 24px, 0px); }
     #bradContainer #bradContent #bradCtaContainer #bradCta {
       position: absolute;
       width: 132px;
